# c4py

./: .coverage  .envrc  .gitignore  CLAUDE.md  README.md  codecov.yml  flake.nix  justfile  pyproject.toml
.github/workflows/: python-tests.yml
src/c4py/: __init__.py  __main__.py  cli.py  errors.py  id.py
tests/: conftest.py  test_cli.py  test_errors.py  test_id.py  test_main.py
