[project]
name = "c4py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Gyss", email = "brian.gyss@thesphere.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
c4py = "c4py:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
